[package]
name = "are_we_web_yet"
version = "0.1.0"
authors = ["Mark Oleson <fusion2004@gmail.com>"]

[dependencies]
serde = "0.8"
serde_json = "0.8"
router = "*"
logger = "*"
clap = "2"
chan = "0.1"
chan-signal = "0.1"
diesel = "0.7.2"
diesel_codegen = { version = "0.7.2", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.9.0"

[dependencies.iron]
version = "*"
